--- a/index.HTML
+++ b/index.HTML
@@ -7,45 +7,35 @@
 </head>
 <div class="wrapper">
 	<table align="center">
-	<td>
-		<div>
-			<h1 align="center">Квитка Антон Николаевич</h1>				
-			<p align="center"><img src="img/P1760143.JPG" width="170" height="220" alt"My_Photo"></p>
-			<p align="center">Донецкий Национальный Университет Экономики и Торговли им. М. И. Туган-Барановского.</p>
-		</div>
+		<td>
+			<div class="border">
+				<h1 align="center">Квитка Антон Николаевич</h1>				
+				<p align="center"><img src="img/P1760143.JPG" width="170" height="220" alt"My_Photo"></p>
+				<p align="center">Донецкий Национальный Университет Экономики и Торговли им. М. И. Туган-Барановского.</p>
+			</div>
+	
+			<div class="border">
+				<p>Хочу учить фронтенд, потому что:</p>
+				<ul>
+					<li>Надоела прежняя работа</li>
+					<li>Хочу купить мотоцикл</li>
+					<li>Хочу много денег и отправиться в путешествие</li>
+				</ul>
+			</div>
 		
-<p align="center">_____________________________________________________________________________</p>
 		
-		<div>
-			<p>Хочу учить фронтенд, потому что:</p>
-			<p></p>
-			<ul>
-				<li>Надоела прежняя работа</li>
-				<li>Хочу купить мотоцикл</li>
-				<li>Хочу много денег и отправиться в путешествие</li>
-			</ul>
-		</div>
-		
-		<p align="center">_____________________________________________________________________________</p>
-
-		<div>
-			<P>Мой контактный телефон</p>
-			<P>066 890 49 70</p>
-			<P></p>
-			<P></p>
-			<P></p>
-			<p></p>
-			<P></p>
-			<P></p>
-			<P></p>
-			<P>Мой профиль в <a id="link" href="https://www.facebook.com/anton.kvitka" target="_blank">Facebook</a></p>
+			<div class="border">
+				<P>Мой контактный телефон</p>
+				<p>066 890 49 70</p>
+				<P>Мой профиль в Facebook</p>
+				<a id="link" href="https://www.facebook.com/anton.kvitka" target="_blank">Facebook.com</a>
+			</div>
 			
-			<p align="center">_____________________________________________________________________________</p>
-			
-			<P>Мой фидбек:</p>
-			<p>Могу попить с Вами сок и написать красивый сайт! :) </p>
-		</div>
-	</td>
+			<div class="fedback">
+				<P>Мой фидбек:</p>
+				<p>Могу попить с Вами сок и написать красивый сайт! :)</p>
+			</div>
+		</td>
 	</table>
 </div>
 </body>
