hw 1 last commit

--- a/index.HTML
+++ b/index.HTML
@@ -1,42 +1,40 @@
-<!DOCTYPE html>
+п»ї<!DOCTYPE html>
 <html>
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+	<meta charset="utf-8">
 		<link rel="stylesheet" href="css/style.css">
-			<title>Квитка Антон Николаевич</title>
+			<title>РљРІРёС‚РєР° РђРЅС‚РѕРЅ РќРёРєРѕР»Р°РµРІРёС‡</title>
 </head>
 <div class="wrapper">
-	<table align="center">
-		<td>
 			<div class="border">
-				<h1 align="center">Квитка Антон Николаевич</h1>				
-				<p align="center"><img src="img/P1760143.JPG" width="170" height="220" alt"My_Photo"></p>
-				<p align="center">Донецкий Национальный Университет Экономики и Торговли им. М. И. Туган-Барановского.</p>
+				<h1>РљРІРёС‚РєР° РђРЅС‚РѕРЅ РќРёРєРѕР»Р°РµРІРёС‡</h1>				
+				<p class="fig"><img src="img/P1760143.JPG" alt"My_Photo"></p>
+				<p class="university">Р”РѕРЅРµС†РєРёР№ РќР°С†РёРѕРЅР°Р»СЊРЅС‹Р№ РЈРЅРёРІРµСЂСЃРёС‚РµС‚ Р­РєРѕРЅРѕРјРёРєРё Рё РўРѕСЂРіРѕРІР»Рё РёРј. Рњ. Р. РўСѓРіР°РЅ-Р‘Р°СЂР°РЅРѕРІСЃРєРѕРіРѕ.</p>
 			</div>
 	
 			<div class="border">
-				<p>Хочу учить фронтенд, потому что:</p>
+				<p>РҐРѕС‡Сѓ СѓС‡РёС‚СЊ С„СЂРѕРЅС‚РµРЅРґ, РїРѕС‚РѕРјСѓ С‡С‚Рѕ:</p>
 				<ul>
-					<li>Надоела прежняя работа</li>
-					<li>Хочу купить мотоцикл</li>
-					<li>Хочу много денег и отправиться в путешествие</li>
+					<li>РќР°РґРѕРµР»Р° РїСЂРµР¶РЅСЏСЏ СЂР°Р±РѕС‚Р°</li>
+					<li>РҐРѕС‡Сѓ РєСѓРїРёС‚СЊ РјРѕС‚РѕС†РёРєР»</li>
+					<li>РҐРѕС‡Сѓ РјРЅРѕРіРѕ РґРµРЅРµРі Рё РѕС‚РїСЂР°РІРёС‚СЊСЃСЏ РІ РїСѓС‚РµС€РµСЃС‚РІРёРµ</li>
 				</ul>
 			</div>
 		
 		
 			<div class="border">
-				<P>Мой контактный телефон</p>
+				<P>РњРѕР№ РєРѕРЅС‚Р°РєС‚РЅС‹Р№ С‚РµР»РµС„РѕРЅ</p>
 				<p>066 890 49 70</p>
-				<P>Мой профиль в Facebook</p>
+				
+				<P>РњРѕР№ РїСЂРѕС„РёР»СЊ РІ Facebook</p>
 				<a id="link" href="https://www.facebook.com/anton.kvitka" target="_blank">Facebook.com</a>
 			</div>
 			
 			<div class="fedback">
-				<P>Мой фидбек:</p>
-				<p>Могу попить с Вами сок и написать красивый сайт! :)</p>
+				<P>РњРѕР№ С„РёРґР±РµРє:</p>
+				
+				<p>РњРѕРіСѓ РїРѕРїРёС‚СЊ СЃ Р’Р°РјРё СЃРѕРє Рё РЅР°РїРёСЃР°С‚СЊ РєСЂР°СЃРёРІС‹Р№ СЃР°Р№С‚! :)</p>
 			</div>
-		</td>
-	</table>
-</div>
+		</div>
 </body>
 </html>
